# tagging-read-it-now

./: .dockerignore  .env.original  CHANGELOG.md  Dockerfile  Dockerfile.production  Pipfile  README.md  docker-compose.yml  setup.cfg
.github/workflows/: build-and-push.yml  build.yml
tagging_read_it_now/: __init__.py  main.py
