[metadata]
name = tagging_read_it_now
version = attr: tagging_read_it_now.__version__
url = https://github.com/u6k/tagging-read-it-now
author = u6k
author_email = u6k.apps@gmail.com
description = "すぐ読みたい記事にタグ付けする"
long_description = file: README.md
license = MIT License

[options]
packages = find:

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 1000

[flake8]
ignore = E501